Fixed several things since last commit. I don't have an exact list. The collapsing button now works on all children. Removed alignment hack in status div by using flex-basis with reasonable values. Cleaned up css file either now or in the previous commit.

--- a/style.css
+++ b/style.css
@@ -78,8 +78,19 @@ body {
 .status {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: flex-start;
   align-items: center;
+}
+
+.status > div {
+  flex-basis: 33%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.next-area h3 {
+  margin-bottom: 0px;
 }
 
 .next-box {
@@ -95,10 +106,6 @@ body {
 .next-box div {
   height: 20px;
   width: 20px;
-}
-
-.buffer {
-  color: black;
 }
 
 /******************
@@ -142,4 +149,34 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+/*******************
+ *Under development*
+ *******************/
+
+.collapsing {
+  background-color: #EEE;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: center;
+  outline: none;
+  font-size: 15px;
+}
+
+.active, .collapsing:hover {
+  background-color: #ccc;
+}
+
+@media all and (max-width: 600px) {
+  .main-row {
+    display: block;
+  }
+
+  .instructions > p {
+    display: none;
+  }
 }
